--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "draw-go-react",
-  "type": "module",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "prebuild": "npm run prebuild:frontend && npm run prebuild:backend",
-    "prebuild:frontend": "cd frontend && npm install",
-    "prebuild:backend": "cd backend && go mod tidy",
-    "build": "npm run prebuild && npm run build:frontend && npm run build:backend",
-    "build:frontend": "cd frontend && npm run build",
-    "build:backend": "cd backend && go build -o draw-go-react",
-    "start": "npm run build && npm run start:backend",
-    "start:backend": "cd backend && ./draw-go-react",
-    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
-    "dev:frontend": "cd frontend && npm run dev",
-    "dev:backend": "cd backend && go run ."
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+	"name": "draw-go-react",
+	"type": "module",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"prebuild": "npm run prebuild:frontend && npm run prebuild:backend",
+		"prebuild:frontend": "cd frontend && npm install",
+		"prebuild:backend": "cd backend && go mod tidy",
+		"build": "npm run prebuild && npm run build:frontend && npm run build:backend",
+		"build:frontend": "cd frontend && npm run build",
+		"build:backend": "cd backend && go build -o draw-go-react",
+		"start": "npm run build && npm run start:backend",
+		"start:backend": "cd backend && ./draw-go-react",
+		"dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+		"dev:frontend": "cd frontend && npm run dev",
+		"dev:backend": "cd backend && go run .",
+		"pretty": "prettier --write .",
+		"lint": "eslint ."
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC"
 }
