--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 		"build": "npm run prebuild && npm run build:frontend && npm run build:backend",
 		"build:frontend": "cd frontend && npm run build",
 		"build:backend": "cd backend && go build -o draw-go-react",
-		"start": "npm run build && npm run start:backend",
-		"start:backend": "cd backend && ./draw-go-react",
+		"start": "cd backend && ./draw-go-react",
 		"dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
 		"dev:frontend": "cd frontend && npm run dev",
 		"dev:backend": "cd backend && go run .",
