--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"chokidar": "^4.0.1"
+		"chokidar": "^4.0.1",
+		"typescript": "^5.6.3"
 	}
 }
