--- a/frontend/public/assets/manifest.json
+++ b/frontend/public/assets/manifest.json
@@ -24,7 +24,8 @@
 			"type": "image/png"
 		}
 	],
-	"start_url": ".",
+	"start_url": "https://draw.danibarker.ca",
+	"id": "https://draw.danibarker.ca",
 	"display": "standalone",
 	"theme_color": "#5c3bff",
 	"background_color": "#222222"
